packages/errors/test/__snapshots__/CHROME_137_LOAD_EXTENSION_NOT_SUPPORTED.ansi
[31mGoogle Chrome v137 and higher does not allow loading extensions via --load-extension. If you need to load an extension to test with Cypress, please use Chrome for Testing, Chromium, or another Chrome variant that supports loading extensions.[39m